# boss

./: AGENTS.md  Cargo.toml  DEPLOYMENT.md  README.md
.cargo/: config.toml
deploy/: boss.env  boss.service
src/: config.rs  discovery.rs  error.rs  lib.rs  main.rs  mdns.rs  mqtt.rs  web.rs
src/bridge/: bridged.rs  mod.rs  node.rs  switch.rs
templates/: index.html
